# crm_extension

./: README.md  pyproject.toml
.github/workflows/: ci.yml
crm_extension/: hooks.py
crm_extension/api/: custom_fields.py  lead_assign.py  lead_connector.py
crm_extension/crm_extension/doctype/lead_apis/: lead_apis.js  lead_apis.json  lead_apis.py  test_lead_apis.py
crm_extension/crm_extension/doctype/lead_product/: lead_product.js  lead_product.json  lead_product.py  test_lead_product.py
